# TwitchViewsBot

./: README.md  TwitchViewsBot.py  pyproject.toml  requirements.txt
BotRes/: Settings.json  proxy_list.txt
