[tool.poetry]
name = "TwitchViewsBot"
version = "0.1"
description = "TwitchViewsBot. Requires HTTP proxies."
author = ["AliToori <https://t.me/AliToori>"]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
playwright = "^1.22.0"
psutil = "^5.9.0"
toml = "^0.10.2"
sv-ttk = "^0.1"
pytest = "^7.1.2"
black = "^22.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pyinstaller = "^5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
